--- a/css/monkey.css
+++ b/css/monkey.css
@@ -10,7 +10,7 @@ html {
 
 /* Write your solution here */
 
-media screen only and (min-width: 406px) and (max-width: 1090px) {
+@media screen only and (min-width: 406px) and (max-width: 1090px) {
   #monkey {
     position: absolute;
     left: 0;
