--- a/css/monkey.css
+++ b/css/monkey.css
@@ -10,10 +10,8 @@ html {
 
 /* Write your solution here */
 
-@media screen only and (min-width: 406px) and (max-width: 1090px) {
+@media only screen and (min-width: 406px) and (max-width: 1170px) {
   #monkey {
-    position: absolute;
-    left: 0;
-    top: 550px;
+    top: 0px;
   }
 }
