--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -20,10 +20,9 @@ html {
 
 /* Write your solution here */
 
-@media only screen and (max-width: 1008px) {
+@media only screen and (min-width: 642px) and (max-width: 1090px) {
   #dolphin {
-    transform: rotate(-0.25turn)
-    right: 0;
-    top: 100px;
+    top: 50px;
+    transform: rotate(.75turn);
   }
 }
